# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
backend/: main.py  pyproject.toml
backend/data/: create_graph_of_helsinki.py
backend/src/: api.py  count_distance.py  dijkstra.py  fringe_search.py  graph.py  idastar.py  index.py  latlng_node_changes.py  main.py  node.py  shortest_path.py
backend/src/algorithms/: dijkstra.py  fringe_search.py
backend/src/graph/: graph.py  node.py
backend/src/tests/: count_distance_test.py  dijkstra_test.py  fakemultigraph.py  fringe_search_test.py  graph_test.py  latlng_node_changes_test.py
documentation/: definitiondocument.md  implementation_document.md  test_document.md  user_guide.md
documentation/weeklyreports/: finalreport.md  weeklyreport1  weeklyreport1.md  weeklyreport2.md  weeklyreport3.md  weeklyreport4.md  weeklyreport5.md  weeklyreport6.md
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: markers.js
frontend/src/services/: routes.js
src/: index.py  shortest_path.py
