[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Roosa Huttunen <huttunenroosa00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
osmnx = "^1.2.2"
folium = "^0.13.0"
scikit-learn = "^1.1.3"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
